<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_topping_placement"
    tools:context="com.example.alienware.projectpizza.Screens.ToppingPlacement">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pizza_ref"
        android:src="@mipmap/empty"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/show_picked">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/linearLayout">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/top13"
            android:id="@+id/newTop13"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/top14"
            android:id="@+id/newTop14"
            android:layout_below="@+id/newTop13"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/top15"
            android:id="@+id/newTop15"
            android:layout_below="@+id/newTop14"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/top16"
            android:id="@+id/newTop16"
            android:layout_below="@+id/newTop15"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/top17"
            android:id="@+id/newTop17"
            android:layout_below="@+id/newTop16"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/top18"
            android:id="@+id/newTop18"
            android:layout_below="@+id/newTop17"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/top19"
            android:id="@+id/newTop19"
            android:layout_below="@+id/newTop18"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/top20"
            android:id="@+id/newTop20"
            android:layout_below="@+id/newTop19"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/top21"
            android:id="@+id/newTop21"
            android:layout_below="@+id/newTop20"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/top22"
            android:id="@+id/newTop22"
            android:layout_below="@+id/newTop21"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/top23"
            android:id="@+id/newTop23"
            android:layout_below="@+id/newTop22"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/top24"
            android:id="@+id/newTop24"
            android:layout_below="@+id/newTop23"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="5dp" />
    </LinearLayout>
    </ScrollView>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/scrollView2">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/linearLayout1">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/top1"
                android:id="@+id/newTop1"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_margin="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/top2"
                android:id="@+id/newTop2"
                android:layout_below="@+id/newTop1"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_margin="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/top3"
                android:id="@+id/newTop3"
                android:layout_below="@+id/newTop2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_margin="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/top4"
                android:id="@+id/newTop4"
                android:layout_below="@+id/newTop3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_margin="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/top5"
                android:id="@+id/newTop5"
                android:layout_below="@+id/newTop4"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_margin="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/top6"
                android:id="@+id/newTop6"
                android:layout_below="@+id/newTop5"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_margin="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/top7"
                android:id="@+id/newTop7"
                android:layout_below="@+id/newTop6"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_margin="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/top8"
                android:id="@+id/newTop8"
                android:layout_below="@+id/newTop7"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_margin="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/top9"
                android:id="@+id/newTop9"
                android:layout_below="@+id/newTop8"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_margin="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/top10"
                android:id="@+id/newTop10"
                android:layout_below="@+id/newTop9"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_margin="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/top11"
                android:id="@+id/newTop11"
                android:layout_below="@+id/newTop10"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_margin="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/top12"
                android:id="@+id/newTop12"
                android:layout_below="@+id/newTop11"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_margin="5dp" />
        </LinearLayout>

    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/picked"
        android:id="@+id/show_picked"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="12dp"
        android:layout_below="@+id/pizza_ref"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/pizza_ref"
        android:layout_alignStart="@+id/pizza_ref"
        android:layout_alignRight="@+id/pizza_ref"
        android:layout_alignEnd="@+id/pizza_ref" />


</RelativeLayout>
